syntax = "proto3";
package xsecurity;

option go_package = "github.com/0xPellNetwork/aegis/x/xsecurity/types";

// VotingPower represents the voting power of an operator
message VotingPower {
  string operator = 1;
  uint64 voting_power = 2;
}
